var.output
Grammar

    0 $accept: start $end

    1 start: EXIT ';'
    2      | print exp ';'
    3      | assignment ';'
    4      | start print exp ';'
    5      | start assignment ';'
    6      | start EXIT ';'
    7      | ptable ';'
    8      | start ptable ';'
    9      | condn
   10      | start condn

   11 assignment: id '=' exp

   12 condn: IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   13      | IF '(' exp ')' '{' id '=' exp ';' '}'
   14      | IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   15      | IF '(' exp ')' '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   16      | IF '(' exp ')' '{' print exp ';' '}'

   17 exp: term
   18    | exp '+' exp
   19    | exp '-' exp
   20    | exp '*' exp
   21    | exp '/' exp
   22    | exp '%' exp
   23    | exp '>' exp
   24    | exp '<' exp
   25    | exp eq exp
   26    | exp ne exp
   27    | exp ge exp
   28    | exp le exp
   29    | '(' exp ')'
   30    | exp and exp
   31    | exp or exp

   32 term: num
   33     | id


Terminals, with rules where they appear

$end (0) 0
'%' (37) 22
'(' (40) 12 13 14 15 16 29
')' (41) 12 13 14 15 16 29
'*' (42) 20
'+' (43) 18
'-' (45) 19
'/' (47) 21
';' (59) 1 2 3 4 5 6 7 8 12 13 14 15 16
'<' (60) 24
'=' (61) 11 12 13 14
'>' (62) 23
'{' (123) 12 13 14 15 16
'}' (125) 12 13 14 15 16
error (256)
id (258) 11 12 13 14 33
num (259) 32
print (260) 2 4 15 16
EXIT (261) 1 6
IF (262) 12 13 14 15 16
ELSE (263) 12 14 15
ptable (264) 7 8
and (265) 30
or (266) 31
eq (267) 25
ne (268) 26
ge (269) 27
le (270) 28


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
start (30)
    on left: 1 2 3 4 5 6 7 8 9 10, on right: 0 4 5 6 8 10
assignment (31)
    on left: 11, on right: 3 5
condn (32)
    on left: 12 13 14 15 16, on right: 9 10
exp (33)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31, on right:
    2 4 11 12 13 14 15 16 18 19 20 21 22 23 24 25 26 27 28 29 30 31
term (34)
    on left: 32 33, on right: 17


State 0

    0 $accept: . start $end

    id      shift, and go to state 1
    print   shift, and go to state 2
    EXIT    shift, and go to state 3
    IF      shift, and go to state 4
    ptable  shift, and go to state 5

    start       go to state 6
    assignment  go to state 7
    condn       go to state 8


State 1

   11 assignment: id . '=' exp

    '='  shift, and go to state 9


State 2

    2 start: print . exp ';'

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 13
    term  go to state 14


State 3

    1 start: EXIT . ';'

    ';'  shift, and go to state 15


State 4

   12 condn: IF . '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   13      | IF . '(' exp ')' '{' id '=' exp ';' '}'
   14      | IF . '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   15      | IF . '(' exp ')' '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   16      | IF . '(' exp ')' '{' print exp ';' '}'

    '('  shift, and go to state 16


State 5

    7 start: ptable . ';'

    ';'  shift, and go to state 17


State 6

    0 $accept: start . $end
    4 start: start . print exp ';'
    5      | start . assignment ';'
    6      | start . EXIT ';'
    8      | start . ptable ';'
   10      | start . condn

    $end    shift, and go to state 18
    id      shift, and go to state 1
    print   shift, and go to state 19
    EXIT    shift, and go to state 20
    IF      shift, and go to state 4
    ptable  shift, and go to state 21

    assignment  go to state 22
    condn       go to state 23


State 7

    3 start: assignment . ';'

    ';'  shift, and go to state 24


State 8

    9 start: condn .

    $default  reduce using rule 9 (start)


State 9

   11 assignment: id '=' . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 25
    term  go to state 14


State 10

   33 term: id .

    $default  reduce using rule 33 (term)


State 11

   32 term: num .

    $default  reduce using rule 32 (term)


State 12

   29 exp: '(' . exp ')'

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 26
    term  go to state 14


State 13

    2 start: print exp . ';'
   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    and  shift, and go to state 27
    or   shift, and go to state 28
    '>'  shift, and go to state 29
    '<'  shift, and go to state 30
    eq   shift, and go to state 31
    ne   shift, and go to state 32
    ge   shift, and go to state 33
    le   shift, and go to state 34
    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    ';'  shift, and go to state 40


State 14

   17 exp: term .

    $default  reduce using rule 17 (exp)


State 15

    1 start: EXIT ';' .

    $default  reduce using rule 1 (start)


State 16

   12 condn: IF '(' . exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   13      | IF '(' . exp ')' '{' id '=' exp ';' '}'
   14      | IF '(' . exp ')' '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   15      | IF '(' . exp ')' '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   16      | IF '(' . exp ')' '{' print exp ';' '}'

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 41
    term  go to state 14


State 17

    7 start: ptable ';' .

    $default  reduce using rule 7 (start)


State 18

    0 $accept: start $end .

    $default  accept


State 19

    4 start: start print . exp ';'

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 42
    term  go to state 14


State 20

    6 start: start EXIT . ';'

    ';'  shift, and go to state 43


State 21

    8 start: start ptable . ';'

    ';'  shift, and go to state 44


State 22

    5 start: start assignment . ';'

    ';'  shift, and go to state 45


State 23

   10 start: start condn .

    $default  reduce using rule 10 (start)


State 24

    3 start: assignment ';' .

    $default  reduce using rule 3 (start)


State 25

   11 assignment: id '=' exp .
   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    and  shift, and go to state 27
    or   shift, and go to state 28
    '>'  shift, and go to state 29
    '<'  shift, and go to state 30
    eq   shift, and go to state 31
    ne   shift, and go to state 32
    ge   shift, and go to state 33
    le   shift, and go to state 34
    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 11 (assignment)


State 26

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   29    | '(' exp . ')'
   30    | exp . and exp
   31    | exp . or exp

    and  shift, and go to state 27
    or   shift, and go to state 28
    '>'  shift, and go to state 29
    '<'  shift, and go to state 30
    eq   shift, and go to state 31
    ne   shift, and go to state 32
    ge   shift, and go to state 33
    le   shift, and go to state 34
    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    ')'  shift, and go to state 46


State 27

   30 exp: exp and . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 47
    term  go to state 14


State 28

   31 exp: exp or . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 48
    term  go to state 14


State 29

   23 exp: exp '>' . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 49
    term  go to state 14


State 30

   24 exp: exp '<' . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 50
    term  go to state 14


State 31

   25 exp: exp eq . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 51
    term  go to state 14


State 32

   26 exp: exp ne . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 52
    term  go to state 14


State 33

   27 exp: exp ge . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 53
    term  go to state 14


State 34

   28 exp: exp le . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 54
    term  go to state 14


State 35

   18 exp: exp '+' . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 55
    term  go to state 14


State 36

   19 exp: exp '-' . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 56
    term  go to state 14


State 37

   22 exp: exp '%' . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 57
    term  go to state 14


State 38

   20 exp: exp '*' . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 58
    term  go to state 14


State 39

   21 exp: exp '/' . exp

    id   shift, and go to state 10
    num  shift, and go to state 11
    '('  shift, and go to state 12

    exp   go to state 59
    term  go to state 14


State 40

    2 start: print exp ';' .

    $default  reduce using rule 2 (start)


State 41

   12 condn: IF '(' exp . ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}'
   13      | IF '(' exp . ')' '{' id '=' exp ';' '}'
   14      | IF '(' exp . ')' '{' id '=' exp ';' '}' ELSE '{' IF '(' exp ')' '{' id '=' exp ';' '}' ELSE '{' id '=' exp ';' '}' '}'
   15      | IF '(' exp . ')' '{' print exp ';' '}' ELSE '{' print exp ';' '}'
   16      | IF '(' exp . ')' '{' print exp ';' '}'
   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    and  shift, and go to state 27
    or   shift, and go to state 28
    '>'  shift, and go to state 29
    '<'  shift, and go to state 30
    eq   shift, and go to state 31
    ne   shift, and go to state 32
    ge   shift, and go to state 33
    le   shift, and go to state 34
    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    ')'  shift, and go to state 60


State 42

    4 start: start print exp . ';'
   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    and  shift, and go to state 27
    or   shift, and go to state 28
    '>'  shift, and go to state 29
    '<'  shift, and go to state 30
    eq   shift, and go to state 31
    ne   shift, and go to state 32
    ge   shift, and go to state 33
    le   shift, and go to state 34
    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39
    ';'  shift, and go to state 61


State 43

    6 start: start EXIT ';' .

    $default  reduce using rule 6 (start)


State 44

    8 start: start ptable ';' .

    $default  reduce using rule 8 (start)


State 45

    5 start: start assignment ';' .

    $default  reduce using rule 5 (start)


State 46

   29 exp: '(' exp ')' .

    $default  reduce using rule 29 (exp)


State 47

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   30    | exp and exp .
   31    | exp . or exp

    '>'  shift, and go to state 29
    '<'  shift, and go to state 30
    eq   shift, and go to state 31
    ne   shift, and go to state 32
    ge   shift, and go to state 33
    le   shift, and go to state 34
    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 30 (exp)


State 48

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp
   31    | exp or exp .

    '>'  shift, and go to state 29
    '<'  shift, and go to state 30
    eq   shift, and go to state 31
    ne   shift, and go to state 32
    ge   shift, and go to state 33
    le   shift, and go to state 34
    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 31 (exp)


State 49

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   23    | exp '>' exp .
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 23 (exp)


State 50

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   24    | exp '<' exp .
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 24 (exp)


State 51

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   25    | exp eq exp .
   26    | exp . ne exp
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 25 (exp)


State 52

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   26    | exp ne exp .
   27    | exp . ge exp
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 26 (exp)


State 53

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . '%' exp
   23    | exp . '>' exp
   24    | exp . '<' exp
   25    | exp . eq exp
   26    | exp . ne exp
   27    | exp . ge exp
   27    | exp ge exp .
   28    | exp . le exp
   30    | exp . and exp
   31    | exp . or exp

    '+'  shift, and go to state 35
    '-'  shift, and go to state 36
    '%'  shift, and go to state 37
    '*'  shift, and go to state 38
    '/'  shift, and go to state 39

    $default  reduce using rule 27 (exp)


State 54
